# Creational-Design-Patterns

./: .gitignore  README.md
01_Singleton/: CMakeLists.txt
01_Singleton/01_basic_example/: Singleton.cpp  Singleton.h  main.cpp
01_Singleton/02_logger/: Logger.cpp  Logger.h  main.cpp
01_Singleton/03_lazy_singleton/: BaseSingleton.h  Logger.cpp  Logger.h  main.cpp
01_Singleton/04_Clock/: Clock.cpp  Clock.h  main.cpp
01_Singleton/04_clock/: main.cpp
01_Singleton/05_testing_issues/: LocalPrinter.cpp  LocalPrinter.h  Printer.cpp  Printer.h  main.cpp
01_Singleton/06_registry/: LocalPrinter.cpp  LocalPrinter.h  PDFPrinter.cpp  PDFPrinter.h  Printer.h  PrinterProvider.cpp  PrinterProvider.h  main.cpp
01_Singleton/07_lazy_registry/: LocalPrinter.cpp  LocalPrinter.h  PDFPrinter.cpp  PDFPrinter.h  Printer.h  PrinterProvider.cpp  PrinterProvider.h  main.cpp
